Got ipad on mobile views fixed

--- a/stylesheet/carousel_portfolio-coding.css
+++ b/stylesheet/carousel_portfolio-coding.css
@@ -9,7 +9,7 @@
 
 .col-md-12.nopadding{
   padding: 0;
-	height: 70vh;
+	height: auto;
 }
 
 .portfolio_images{
